# closeapp

./: .gitignore  README.md  exercise.py  pyproject.toml
scripts/: cov
tests/: test_exercise.py
