[project]
name = "close"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.14.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-httpx>=0.36.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "."
module-name = []

[tool.ruff]
line-length = 80
indent-width = 2

[tool.ruff.format]
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]